Modifiche finali, abbiamo controllato tutte le classi una per una, commentato le parti dubbie.